fix FindBugs issues: DM_NUMBER_CTOR, DM_STRING_VOID_CTOR,     SBSC_USE_STRINGBUFFER_CONCATENATION, SIC_INNER_SHOULD_BE_STATIC     ST_WRITE_TO_STATIC_FROM_INSTANCE_METHOD
svn path=/trunk/; revision=45887


Former-commit-id: afd4ae3b0eba889e1c4ccf7a05ff1d4e01848f29